--- a/financial.html
+++ b/financial.html
@@ -75,6 +75,8 @@
               step="0.01"
               id="gift-value"
               onkeyup="willReceive()"
+              inputmode="decimal"
+              pattern="[0-9]*"
             />
           </div>
 
