add header logo

--- a/financial.html
+++ b/financial.html
@@ -21,8 +21,10 @@
         <img src="./assets/arrow-left.svg" alt="Home" />
         <span>Voltar</span>
       </a>
-      <a href="./index.html">
-        <img src="./assets/logo.svg" alt="Guga e Déborah" />
+      <a href="./index.html" class="nav-logo-text">
+        <span>G</span>
+        <sup>❤️</sup>
+        <span>D</span>
       </a>
     </nav>
 
