--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </head>
   <body>
     <nav class="navigation">
-      <a href="#">
-        <img src="./assets/logo.svg" alt="Guga e Déborah" />
+      <a href="#" class="nav-logo-text">
+        <span>G</span>
+        <sup>❤️</sup>
+        <span>D</span>
       </a>
       <ul>
         <li><a href="#">Lista de Presentes</a></li>
