add first version of gifts

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>D</span>
       </a>
       <ul>
-        <li><a href="#">Lista de Presentes</a></li>
+        <li><a href="./gifts.html">Lista de Presentes</a></li>
         <li><a href="./financial.html">Presentear com Dinheiro</a></li>
       </ul>
     </nav>
