feat: :lipstick: update style

--- a/index.html
+++ b/index.html
@@ -21,5 +21,137 @@
         <li><a href="./financial.html">Presentear com Dinheiro</a></li>
       </ul>
     </nav>
+
+    <main class="index-content">
+      <h1>
+        Gustavo Bispo &<br />
+        Déborah Dutra
+      </h1>
+      <h2>Lagoa Seca, 14 de Janeiro 2024</h2>
+
+      <img class="main-img" src="./assets/main/main.JPG" alt="Wedding" />
+
+      <section>
+        <div>
+          <span>Sejam bem vindos ao nosso site!</span>
+
+          <p>
+            Queridos familiares e amigos, estamos honrados por estarem aqui!
+          </p>
+
+          <p>
+            Criamos esse site para compartilharmos detalhes do nosso casamento,
+            especialmente conscientes de que muitos de vocês terão de fazer um
+            esforcinho extra viajando até a nossa cidade.
+          </p>
+
+          <p>
+            Por isso, além de um pouquinho da nossa história, aqui vocês também
+            encontrarão dicas de hospedagem, deslocamento, salões de beleza,
+            traje, etc.
+          </p>
+
+          <p>
+            Ah, é importante confirmar sua presença. Em breve, você será
+            contactado pelos nossos cerimonialistas que junto a você,
+            confirmarão a sua presença.
+          </p>
+
+          <p>
+            A contagem regressiva começa e aguardamos ansiosos! Dia 14.01.2024
+            será o melhor dia!
+          </p>
+        </div>
+      </section>
+
+      <div class="cerimony-img"></div>
+
+      <section>
+        <div>
+          <span>A Cerimônia!</span>
+
+          <p>
+            Aguardamos a presença de todos no momento em que nossa união será
+            abençoada diante de Deus!
+          </p>
+
+          <p>
+            A cerimônia religiosa será rápida, com início às 15:00h, no mesmo
+            local da celebração festiva.
+          </p>
+
+          <p>
+            Tentaremos ser extremamente pontuais. Contamos com vocês para isso!
+          </p>
+        </div>
+      </section>
+
+      <img
+        class="local-img"
+        src="./assets/main/la-paloma.jpg"
+        alt="La Paloma"
+      />
+
+      <section>
+        <div>
+          <span>Cerimônia e Recepção!</span>
+
+          <p>
+            Optamos por realizar tanto nossa cerimônia quanto a recepção em um
+            único local.
+          </p>
+
+          <p>
+            Portanto, estaremos nos reunindo no La Paloma Recepcões. Br 104 - Km
+            117 | Lagoa Seca - PB (saída de Campina Grande sentido lagoa seca do
+            lado esquerdo da pista).
+          </p>
+
+          <p>Você também pode conferir no mapa abaixo.</p>
+
+          <br />
+
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63337.31128135034!2d-35.936870551367164!3d-7.1742262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ac21da7e59178f%3A0x2f7c38210773ff64!2zTGEgUGFsb21hIFJlY2Vww6fDtWVz!5e0!3m2!1spt-BR!2sbr!4v1702042957740!5m2!1spt-BR!2sbr"
+            width="600"
+            height="320"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </section>
+
+      <img
+        class="gifts-img"
+        src="./assets/main/gifts.webp"
+        alt="Lista de Presentes!"
+      />
+
+      <section>
+        <div>
+          <span>Lista de presentes!</span>
+
+          <p>
+            Nós já temos algumas coisinhas em nossa casa, mas ela ainda não está
+            completa. Você pode nos ajudar comprando um dos presentes de nossa
+            lista aqui no site.
+          </p>
+
+          <p>
+            Você pode nos presentear com um presente clicando no botão "Lista de
+            Presentes" ou através do PIX, clicando no botão "Presentear com
+            Dinheiro".
+          </p>
+
+          <p>Qualquer presente e qualquer valor é bem-vindo! ❤️</p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <span>Feito com <i>❤️</i> para todos os nossos amigos e convidados</span>
+    </footer>
   </body>
 </html>
