feat: :sparkles: new link option

--- a/gifts.html
+++ b/gifts.html
@@ -33,6 +33,10 @@
       <div class="column">
         <div class="methods" id="actions-container">
           <h1>No momento temos os seguintes presentes disponíveis</h1>
+          <span
+            >Caso os presentes esgotem, você ainda pode contribuir clicando
+            <a href="/financial.html">AQUI</a>.</span
+          >
           <span>
             Você pode pagar com Pix, TED, Crédito, 2 cartões, PayPal, Débito
             Virtual Caixa, Saldo MercadoPago, Lotérica e Boleto.
