--- a/gifts.html
+++ b/gifts.html
@@ -33,17 +33,15 @@
       <div class="column">
         <div class="methods" id="actions-container">
           <h1>No momento temos os seguintes presentes disponíveis</h1>
-          <span
-            >Caso os presentes esgotem, você ainda pode contribuir clicando
-            <a href="/financial.html">AQUI</a>.</span
-          >
           <span>
-            Você pode pagar com Pix, TED, Crédito, 2 cartões, PayPal, Débito
-            Virtual Caixa, Saldo MercadoPago, Lotérica e Boleto.
+            Caso os presentes esgotem, você ainda pode contribuir clicando
+            <a href="/financial.html">AQUI</a>.
           </span>
           <span>
-            Você pode alterar a forma de pagamento a qualquer momento.
+            Para pagamentos em PIX, utilize a chave a seguir: <br />CPF:
+            <a href="#" onclick="copyText('102.316.314-48')">102.316.314-48</a>
           </span>
+          <span> Aceitamos Pix, TED, Boleto, Crédito, 2 cartões e mais. </span>
           <span>
             Selecione o presente que deseja comprar e logo em seguida, no topo
             da página, aparecerá o botão PAGAR AGORA
@@ -55,27 +53,6 @@
       <div class="column-2-3">
         <div class="show-gifts"></div>
       </div>
-
-      <!-- <div class="column">
-        <div class="thanks">
-          <div class="pix-key fade">
-            <h2>Para valores avulsos, utilize a chave pix abaixo</h2>
-
-            <h5>e84b74ce-29e8-408f-96f4-4efe18bc1927</h5>
-            <button
-              class="pix-button"
-              onclick="copyText('e84b74ce-29e8-408f-96f4-4efe18bc1927')"
-            >
-              Copiar chave Pix
-            </button>
-          </div>
-
-          <div class="thanks-img-div fade">
-            <h2>Obrigado! 😁❤️</h2>
-            <img src="./assets/thanks.svg" alt="Obrigado!" />
-          </div>
-        </div>
-      </div> -->
     </main>
 
     <footer>
